Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-900

RM fails a DCHECK on queries with no scans

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 1.3
    • Impala 1.3
    • None
    • None

    Description

      I have a very good handle on this, but filing in order to track. A simple query with no scans asks for no resources, which fails a DCHECK. We should ask for a minimum set of resources, or make the DCHECK smarter.

      Attachments

        Activity

          People

            henryr Henry Robinson
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: